--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -252,8 +252,8 @@
     float: left;
     img {
       border: solid 1px #eee;
-      max-width: 400px;
-      max-height: 400px;
+      /*width: 400px;*/
+      /*max-height: 400px;*/
     }
   }
   .thumbnail {
